# Linear-Regression-Task

./: Linear_Regression.ipynb  README.md  multivariate.ipynb  pyproject.toml
API/: best_model.pkl  prediction.py  requirements.txt
summative/API/: best_model.pkl  prediction.py  preprocessor.pkl  requirements.txt
summative/flutterapp/: pubspec.yaml
summative/flutterapp/ios/Runner.xcodeproj/: project.pbxproj
summative/flutterapp/lib/: main.dart
summative/flutterapp/test/: widget_test.dart
summative/linear_regression/: multivariate.ipynb
