[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-regression-model"
version = "0.1.0"
description = "Youth unemployment linear regression deployment with FastAPI and Flutter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "scikit-learn==1.6.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
]

[tool.setuptools]
py-modules = []